components/books/calibre-web/controller/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /calibre(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: calibre-web
                port:
                  number: 8083
